--- a/docs_v2/docs/main/create-new-template/templates.mdx
+++ b/docs_v2/docs/main/create-new-template/templates.mdx
@@ -1,6 +1,7 @@
 ---
 pagination_next: main/create-new-template/packages
 pagination_prev: main/create-new-template/index
+sidebar_position: 1
 ---
 
 import { Example } from '@site/docs/components/example';
@@ -10,19 +11,27 @@ import CodeBlock from '@theme/CodeBlock';
 
 # Templates
 
-:::info
+:::note
+
 We will be referring to `<some-name>` in our guide to represent any directory.
+
 :::
 
-A tps template is a collection of folders and files that acts as a blueprint for effortlessly recreating identical file structures in different locations.
-Think of it as a convenient "copy and paste" functionality. When rendering a tps template, the tool scans all the files and
-directories within the template folder, and proceeds to duplicate them in a directory of your preference.
+A tps template is a collection of folders and files that acts as a blueprint for
+effortlessly recreating identical file structures in different locations. Think
+of this as a google doc template but for files and folders. When rendering a tps
+template, the tool scans all the files and directories within the template
+folder, and renders them in a directory of your preference. Tps also allows you
+to incorporate additional information during the template rendering process,
+resulting in a more dynamic template.
 
-tps goes beyond simple duplication by enabling you to incorporate additional information during the template rendering process, resulting in a more dynamic template. The concept of dynamic customization will be further discussed in detail later in this guide
+Don't worry about all this right now! More will be discussed later on. First,
+let's start with the basics.
 
 ## Where do templates live
 
-All TPS templates need to live in a `.tps` folder. Sub directories of the `.tps` folder are referred to are your `templates`. You may have as many templates as you wish.
+All TPS templates need to live in a `.tps` folder. Subdirectories of the `.tps`
+directory are your templates. You may have as many templates as you wish.
 
 ```text
 | - .tps/
@@ -31,7 +40,9 @@ All TPS templates need to live in a `.tps` folder. Sub directories of the `.tps`
 ```
 
 <Example>
-If I were to make a new template called <code>react-component</code> then my folder structure would look like this:
+
+If I were to make a new template called <code>react-component</code> then my
+folder structure would look like this:
 
 ```text
 | - .tps/
@@ -42,7 +53,8 @@ If I were to make a new template called <code>react-component</code> then my fol
 
 ## Packages
 
-Now lets break down what to put in your template folder. Inside of each `template` you can have directories referred to as `packages`.
+Now lets break down what to put in your template folder. Inside of each
+`template` you can have directories referred to as `packages`.
 
 ```text
 | - .tps/
@@ -51,21 +63,23 @@ Now lets break down what to put in your template folder. Inside of each `templat
 		| - <packages...>/
 ```
 
-Now, within each package directory, you have the freedom to add an unlimited number of files and directories.
-These resources will be utilized during the template rendering process. You are free to name the
-packages as you wish, with one exception. While each template can have a `default` package, it is not mandatory to specify one.
+Now, within each package directory, you have the freedom to add an unlimited
+number of files and directories. These resources will be utilized during the
+template rendering process. You are free to name the packages as you wish, with
+one exception. While each template can have a `default` package, it is not
+mandatory to specify one.
 
-Every time you render a template, tps will
-automatically utilize all the contents _(files/directories)_ within your `default` package.
-For any additional packages contents that you wish to include in the rendering process, you must
+Every time you render a template, tps will automatically utilize all the
+contents _(files/directories)_ within your `default` package. For any additional
+package contents that you wish to include in the rendering process, you must
 explicitly specify them when rendering the template.
 
-Dont worry more will be covered on this in our [packages guide](./packages)
+Dont worry more will be covered on this in our next section of this guide
 
 <Example open>
 
-Lets say we have a template called `node-server`. This template is
-responsible for setting up a brand new webserver with all the bells and whistles included.
+Lets say we have a template called `node-server`. This template is responsible
+for setting up a brand new webserver with all the bells and whistles included.
 
 ```text
 | - .tps/
@@ -77,9 +91,11 @@ responsible for setting up a brand new webserver with all the bells and whistles
 			// highlight-end
 ```
 
-lets say today we had a new idea for a trash removal company called `trash-removal`.
-If we wanted to generate this app with our template then it would create a new directory called `trash-removal`
-and render all files inside the templates `default` package and place them into the new `trash-removal` directory it just created
+let's say today we had a new idea for a trash removal company called
+`trash-removal`. If we wanted to generate this app with our template then it
+would create a new directory called `trash-removal` and render all files inside
+the templates `default` package and place them into the new `trash-removal`
+directory it just created
 
 ```text
 | - trash-removal/
@@ -92,7 +108,9 @@ and render all files inside the templates `default` package and place them into 
 </Example>
 
 :::note
+
 You can learn more about packages in our [packages guide](./packages.md)
+
 :::
 
 ## Settings file
@@ -104,31 +122,41 @@ You can learn more about packages in our [packages guide](./packages.md)
 		| - settings.json
 ```
 
-A template can optionally have a settings file where you can define prompts and other configuration details.
-The settings file will be discussed in more detail later in this guide.
+A template can optionally have a settings file where you can define prompts and
+other configuration details. The settings file will be discussed in more detail
+later in this guide.
 
 :::note
-You can learn more about the settings file in our [settings file guide](./settings/README.md)
+
+You can learn more about the settings file in our
+[settings file guide](./settings/README.md)
+
 :::
 
 ## Dynamic files
 
-Within each package, you have the ability to use dynamic files. A file is considered
-dynamic when it has a `.dot` extension. These files enable you to leverage all the features provided by [doT](http://olado.github.io/doT/index.html) within tps.
+Within each package, you can use dynamic files. Dynamic files are files that end
+with a `.dot` extension. These files enable you to leverage all the features
+provided by [doT](http://olado.github.io/doT/index.html) within tps.
 
-Dynamic files provide the capability to pass data and enhance the power of dynamic rendering.
-By utilizing this data, you can leverage the features of doT to conditionally render specific sections of
-code or perform other dynamic operations. This allows for more flexibility and customization in your templates.
+Dynamic files provide the capability to pass data and enhance the power of
+dynamic rendering. By utilizing this data, you can leverage the features of doT
+to conditionally render specific sections of code or perform other dynamic
+operations. This allows for more flexibility and customization in your
+templates.
 
 ## Making a new template
 
-There is nothing special about a template. Its nothing other than a directory holding a collection of files and folders. We could create a template two ways:
+There is nothing special about a template. Its nothing other than a directory
+holding a collection of files and folders. We could create a template two ways:
 
 1. Use our command line tool _(recommended)_
 2. Create the directories and files with `mkdir/touch` or use Finder etc.
 
 :::note
+
 Read more about our command line docs [here](../command-line/readme.md)
+
 :::
 
 <Tabs>
@@ -141,7 +169,9 @@ tps new template <template-name>
 ```
 
 :::note
+
 Read more about our `new` command more [here](../../api/cli/commands/new.md)
+
 :::
 
   </TabItem>
@@ -160,74 +190,176 @@ mkdir .tps/<template-name>/default
 
 ### what is rendering a template
 
-Rendering a new template, also known as template instantiation or the template instantiation process, refers
-to the action of utilizing a template as a starting point to create a new instance. It involves duplicating
-the files and folders from the template folder and transferring them to a different location, effectively
-replicating a "copy and paste" action.
+Rendering a new template, also known as template instantiation or the template
+instantiation process, refers to the action of utilizing a template as a
+starting point to create a new instance. It involves rendering the files and
+folders from the template folder and transferring them to the **build path(s)**.
 
+<br />
+<br />
+
+```mermaid
+graph LR;
+	step1("User renders
+	template")
+	step2("Tps loads all files
+	and folders from packages")
+	step3("Tps creates a directory
+	for the passed build path")
+	step4("Creates all needed files and
+	folders inside each build path")
+    step1-->step2;
+    step2-->step3;
+    step3-->step4;
 ```
-+ - - - - - - - +    + - - - - - - - - - +    + - - - - - - - - - - +    + - - - - - - - - - - - - -+
-| Tps gets path |    | loads all files & |    | creates a new       |    | creates each file &      |
-| to template   | -> | folders for each  | -> | directory from the  | -> | folder from the packages |
-+ - - - - - - - +    | package passed in |    | locations passed in |    | in each new directory    |
-					 + - - - - - - - - - +    + - - - - - - - - - - +    + - - - - - - - - - - - - -+
-```
 
-The "location" that you pass in to tell tps where to render the new template to are referred to as a `build path`. You can kind of think of the build path as the name of the new template being created. tps will get this build path and create a directory with that name and copy all of the files & folders from your templates packages into that new directory.
+<br />
+<br />
 
-The build path could can either be a single word or a file system like path like so:
+The `build path` is the information you provide to TPS to specify the location
+and details of the new template to be created. It can be thought of as the name
+or identifier for the new template. When TPS receives the build path, it creates
+a directory with that name and renders all the files and folders from your
+template packages into this newly created directory. In essence, the build path
+acts as a directive to TPS, guiding it in assembling the new template by
+organizing the appropriate files and folders in the designated directory.
 
-```
+### Single build path
+
+When the build path is a single word, tps utilizes it as the name for your new
+instance. It then generates a fresh directory with the given name within the
+current directory you are in, and proceeds to render all contents within the
+newly created directory.
+
+```text
+// highlight-next-line
 app
 |__|
-	^ Build path
+ ^ Build path & template name
 ```
 
-or with a path
+<Example>
 
+If we were rendering a new instance from a template and we have the build path
+`app` then templates will create a new directory called `app` and render all
+contents inside of it
+
+```text title="Template structure"
+| - .tps/
+	// highlight-start
+	| - node-server/
+		| - default/
+			| - server.js
+			| - package.json
+	// highlight-end
 ```
+
+```text title="Rendered instance"
+// highlight-start
+| - app/
+	| - server.js
+	| - package.json
+// highlight-end
+```
+
+</Example>
+
+### Long build path
+
+If you give tps a long build path, it uses it as the path to create your new
+template. The last word becomes the template name, and the words before that
+show which directory you want the new instance to be in. If the directory doesnt
+exist, tps will create it.
+
+```text
+// highlight-next-line
 some/path/app
+		  |__| <- template name
 |____________|
 	^ Build path
 ```
 
-Now when the build path is just a single word then the build path is also the name of the new template being created. This name is used to create the name of the new directory. If I passed in `app` as the build path then a directory app will be created and all of the templates files & folders will be placed into `app`.
+<Example>
 
-```
-| - app/
-	| - <all-of-the-template-files...>
+If we were rendering a new instance from a template and we have the build path
+`code/projects/app` then templates will create a new directory called `app`
+inside of `<cwd>/code/projects` and render all contents inside of it.
+
+```text title="Template structure"
+| - .tps/
+	// highlight-start
+	| - node-server/
+		| - default/
+			| - server.js
+			| - package.json
+	// highlight-end
 ```
 
-But when the build path has a long path attached, only the end word is the name of the template.
-
-```
-some/path/app
-		 |___|
-			^ name of template
-```
-
-The rest of the path is used as an additional location when rendering the template. So if you passed in `some/path/app` then `app` will be created in the `some/path` directory. If the directory doesn't exist it will be created.
-
-```
-| - some/
-	| - path/
+```text title="Rendered instance"
+|- code
+	|- projects
+		// highlight-start
 		| - app/
-			| - <all-of-the-template-files...>
+			| - server.js
+			| - package.json
+		// highlight-end
 ```
 
-You can also pass in multiple build paths at the same time. This is going to be the same as passing in one but for each one.
+</Example>
+
+### Multiple build paths
+
+You can also pass in multiple build paths at the same time. This is going to be
+the same as passing in one but for each one.
+
+<Example>
+
+If we were rendering a new instance from a template and we have the build paths
+`code/projects/app` & `code/projects/app2` then templates will create new
+directories for both and render contents into both of them.
+
+```text title="Template structure"
+| - .tps/
+	// highlight-start
+	| - node-server/
+		| - default/
+			| - server.js
+			| - package.json
+	// highlight-end
+```
+
+```text title="Rendered instance"
+|- code
+	|- projects
+		// highlight-start
+		| - app/
+			| - server.js
+			| - package.json
+		| - app2/
+			| - server.js
+			| - package.json
+		// highlight-end
+```
+
+</Example>
 
 ### How to render a template
 
-There are two ways on how to render a template. One is via our command line tool or by our `node_module` package. We wont go deep into this topic right now but here are some basics.
+There are two ways on how to render a template. One is via our command line tool
+or by our `node_module` package. We wont go deep into this topic right now but
+here are some basics.
 
 `<template-to-use>` is the name of the template you would like to use.
 
 :::tip
-Not sure what templates you have? Check out our [list command](../../api/cli/list.md)
+
+Not sure what templates you have? Check out our
+[list command](../../api/cli/list.md)
+
 :::
 
-`<build-paths...>` is the location/name of where you want your new rendered template to go
+`<build-paths...>` is the location/name of where you want your new rendered
+template to go
 
 <Tabs groupId="cli-node">
   <TabItem value="tps" label="tps cli" default>
@@ -371,9 +503,12 @@ tps.render(process.cwd(), buildPaths);
 
 ## Example
 
-Lets create our first template together. For this example we will be creating a template that generates a `index.js` file for us that, if ran it will print out "hello world". Easy right? Lets do this...
+Lets create our first template together. For this example we will be creating a
+template that generates a `index.js` file for us that, if ran it will print out
+"hello world". Easy right? Lets do this...
 
-First change your cwd into our `tps-example` folder.
+First change your cwd into a test directory or directory of choice. Well be
+using a directory called `tps-example`.
 
 ```bash
 cd path/to/tps-example
@@ -385,9 +520,10 @@ Next create a template called `hello-world`.
 tps new template hello-world
 ```
 
-This will create a `hello-world` directory inside of the `tps-example/.tps` directory. Inside of that directory, will be a `default` folder.
+This will create a `hello-world` directory inside of the `tps-example/.tps`
+directory. Inside of that directory, will be a `default` folder.
 
-```
+```text
 | - tps-example/
 	| - .tps/
 		| - hello-world/
@@ -400,9 +536,9 @@ Next add a `index.js` file into `tps-example/.tps/hello-world/default`.
 echo "console.log('hello world')" > .tps/hello-world/default/index.js
 ```
 
-Our `tps-example` should now resemble this folder structure
+your directory should now resemble this folder structure
 
-```
+```text
 | - tps-example/
 	| - .tps/
 		| - hello-world/
@@ -416,14 +552,15 @@ Now to create this template call this command.
 tps hello-world firstTemplate
 ```
 
-This should create a folder called `firstTemplate` inside of `tps-example` like so:
+This should create a folder called `firstTemplate` inside of `tps-example` like
+so:
 
 ```text
 | - tps-example/
 	| - .tps/
 		| - ...
 	// highlight-start
-	| - firstTemplate/ <-- template you just created
+	| - firstTemplate/
 		| - index.js
 	// highlight-end
 ```
