--- a/docs_v2/docs/main/create-new-template/prompts.mdx
+++ b/docs_v2/docs/main/create-new-template/prompts.mdx
@@ -55,7 +55,7 @@ Don't remember what the setting file is? Refresh your memory in the
 :::
 
 Now lets go over some of the basics. To get a full list of properties check out
-the [prompts API documentations](/docs/api/settings#prompts)
+the [Prompts API documentation](/docs/api/settings/prompt)
 
 ### Name
 
@@ -96,7 +96,7 @@ answer.
 }
 ```
 
-you can access the answer with:
+you can access the users answer with:
 
 ```text
 {{= tps.answers.age }}
