fix broken links

--- a/docs/docs/api/settings/index.mdx
+++ b/docs/docs/api/settings/index.mdx
@@ -21,4 +21,4 @@ Prompts for your template.
 }
 ```
 
-see [Prompt API](./prompt) for prompt options
+see [Prompt API](./settings/prompt) for prompt options
