--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -378,7 +378,7 @@ Here's an example:
 
 Now, let's explore some of the most commonly used properties available in this
 object. For a full list, you can refer to the
-[tps context API](/api/template-context).
+[tps context API](../../api/template-context).
 
 ### Name
 
@@ -502,6 +502,6 @@ const {{= tps.name}} = (props) => {
 
 :::tip
 
-Don't remember how to use packages? Refresh your mind [here](./packages.md)
+Don't remember how to use packages? Refresh your mind [here](./packages)
 
 :::
