--- a/docs/docs/main/create-new-template/index.mdx
+++ b/docs/docs/main/create-new-template/index.mdx
@@ -9,7 +9,7 @@ pagination_prev: main/intro
 
 Creating a new template requires your repository to be initialized with
 Templates. You can read how to do this
-[here](../tpsrc#initializing-repo-with-templates).
+[here](tpsrc#initializing-repo-with-templates).
 
 :::
 
