--- a/docs/docs/main/create-new-template/packages.mdx
+++ b/docs/docs/main/create-new-template/packages.mdx
@@ -228,8 +228,7 @@ extra package during the rendering process. This package will have the necessary
 materials for conducting unit tests. however if they chose against this then tps
 would not include anything from the unit test package
 
-Dont worry well go over this more in depth in our
-[prompts guide](./settings/prompts.md)
+Dont worry well go over this more in depth in our [prompts guide](./prompts)
 
 ## Making a new package
 
@@ -244,7 +243,7 @@ tps new package <template> <package-name>
 
 :::note
 
-Read more about our `new` command more [here](../../api/cli/commands/new.md)
+Read more about our `new` command more [here](../../api/cli#new)
 
 :::
 
