--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -109,7 +109,7 @@ directory it just created
 
 :::note
 
-You can learn more about packages in our [packages guide](./packages.md)
+You can learn more about packages in our [packages guide](./packages)
 
 :::
 
@@ -129,7 +129,7 @@ later in this guide.
 :::note
 
 You can learn more about the settings file in our
-[settings file guide](./settings/README.md)
+[settings file guide](./settings)
 
 :::
 
@@ -155,7 +155,7 @@ holding a collection of files and folders. We could create a template two ways:
 
 :::note
 
-Read more about our command line docs [here](../command-line/readme.md)
+Read more about our command line docs [here](../../api/cli)
 
 :::
 
@@ -170,7 +170,7 @@ tps new template <template-name>
 
 :::note
 
-Read more about our `new` command more [here](../../api/cli/commands/new.md)
+Read more about our `new` command more [here](../../api/cli#new)
 
 :::
 
@@ -354,7 +354,7 @@ here are some basics.
 :::tip
 
 Not sure what templates you have? Check out our
-[list command](../../api/cli/list.md)
+[list command](../../api/cli#list)
 
 :::
 
