--- a/docs/docs/main/templates/index.mdx
+++ b/docs/docs/main/templates/index.mdx
@@ -11,4 +11,4 @@ collaborate to bring even more value to the community!
 
 :::
 
-- [react-component](./react-component)
+- [react-component](./templates/react-component)
