fix some links to get build working

--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -55,13 +55,13 @@ Don't remember what the setting file is? Refresh your memory in the
 :::
 
 Now lets go over some of the basics. To get a full list of properties check out
-the [Prompts API documentation](/docs/api/settings/prompt)
+the [Prompts API documentation](../../api/settings/prompt)
 
 ### Name
 
 Let's start with the `name` field. This field is essential for enabling
 prompting functionality. All of your prompt answers will be conveniently stored
-under the [`tps.answers`](/docs/api/template-context#answers) object property.
+under the [`tps.answers`](../../api/template-context#answers) object property.
 
 ```json title="settings.json"
 {
