--- a/docs/docs/main/tpsrc.mdx
+++ b/docs/docs/main/tpsrc.mdx
@@ -100,7 +100,7 @@ also add configurations then the tpsrc files would look something like this:
 :::note
 
 To find all the available properties you can use in the configuration file,
-check out the [tpsrc API](/docs/api/tpsrc)
+check out the [tpsrc API](../api/tpsrc)
 
 :::
 
@@ -174,7 +174,7 @@ property
 :::note
 
 To find all the available options for configuring templates, check out the
-[Template Options API](/docs/api/template#options)
+[Template Options API](../api/template#options)
 
 :::
 
