--- a/docs/docs/main/create-new-template/settings.mdx
+++ b/docs/docs/main/create-new-template/settings.mdx
@@ -54,15 +54,15 @@ greatly value contributions and welcome any input you may have.
 
 :::tip
 
-Our [`new template`](http://localhost:3000/docs/api/cli#new-template) command
-creates this file for you 😃
+Our [`new template`](../../api/cli#new-template) command creates this file for
+you 😃
 
 :::
 
 ## Settings options
 
 You can explore the complete list of available fields for a settings file in the
-comprehensive [Settings File API Documentation](/docs/api/settings). This guide
+comprehensive [Settings File API Documentation](../../api/settings). This guide
 will cover the following topics:
 
 - [Prompting](./prompts)
