Add index page for API docs and change title on home page

--- a/docs/docs/api/index.mdx
+++ b/docs/docs/api/index.mdx
@@ -12,21 +12,19 @@ import DocCardList from '@theme/DocCardList';
       type: 'category',
       label: 'Templates CLI',
       href: './api/cli',
-      description: 'Explore the comprehensive Templates CLI API documentation',
+      description: 'Explore the comprehensive CLI API documentation',
     },
     {
       type: 'category',
       label: 'Settings File',
       href: './api/settings',
-      description:
-        'Explore the comprehensive Templates Settings File API documentation',
+      description: 'Explore the comprehensive Settings File API documentation',
     },
     {
       type: 'category',
       label: 'Templates Context',
       href: './api/template-context',
-      description:
-        'Explore the comprehensive Templates Settings File API documentation',
+      description: 'Explore the comprehensive Settings File API documentation',
     },
     {
       type: 'category',
@@ -39,7 +37,7 @@ import DocCardList from '@theme/DocCardList';
       label: 'Templates Config',
       href: './api/tpsrc',
       description:
-        'Explore the comprehensive Templates Configuration API (tpsrc) documentation',
+        'Explore the comprehensive Templates Config API documentation',
     },
   ]}
 />
