small fixes for API index page and order of API side bar

--- a/docs/docs/api/index.mdx
+++ b/docs/docs/api/index.mdx
@@ -1,5 +1,8 @@
 ---
 sidebar_position: 1
+
+pagination_next: null
+pagination_prev: null
 ---
 
 import DocCardList from '@theme/DocCardList';
@@ -10,15 +13,9 @@ import DocCardList from '@theme/DocCardList';
   items={[
     {
       type: 'category',
-      label: 'Templates CLI',
-      href: './api/cli',
-      description: 'Explore the comprehensive CLI API documentation',
-    },
-    {
-      type: 'category',
-      label: 'Settings File',
-      href: './api/settings',
-      description: 'Explore the comprehensive Settings File API documentation',
+      label: 'Templates API',
+      href: './api/template',
+      description: 'Explore the comprehensive Templates API documentation',
     },
     {
       type: 'category',
@@ -28,9 +25,9 @@ import DocCardList from '@theme/DocCardList';
     },
     {
       type: 'category',
-      label: 'Templates API',
-      href: './api/template',
-      description: 'Explore the comprehensive Templates API documentation',
+      label: 'Templates CLI',
+      href: './api/cli',
+      description: 'Explore the comprehensive CLI API documentation',
     },
     {
       type: 'category',
@@ -38,6 +35,12 @@ import DocCardList from '@theme/DocCardList';
       href: './api/tpsrc',
       description:
         'Explore the comprehensive Templates Config API documentation',
+    },
+    {
+      type: 'category',
+      label: 'Settings File',
+      href: './api/settings',
+      description: 'Explore the comprehensive Settings File API documentation',
     },
   ]}
 />
