--- a/docs/docs/api/template-context.mdx
+++ b/docs/docs/api/template-context.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 3
+---
+
 import { Text } from '@site/docs/components/text';
 import { Example } from '@site/docs/components/example';
 import { Dot } from '@site/docs/components/dot';
