--- a/docs/docs/api/template.mdx
+++ b/docs/docs/api/template.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 2
+---
+
 import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
